<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginActivity_logo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="70dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_sound_box_white_s_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="left"
                android:text="@string/loginActivity_welcome"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center_vertical"
                android:text="@string/loginActivity_message"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_login_activity_email"
                    android:hint="@string/loginActivity_emailHint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    tools:targetApi="lollipop" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@android:color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/white"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_login_activity_password"
                    android:hint="@string/loginActivity_passwordHint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    tools:targetApi="lollipop" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/loginActivity_loginBtn"
                    android:textAlignment="center"
                    android:textColor="@color/colorGrey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_forgetPW"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignEnd="@+id/btn_login"
                    android:layout_alignStart="@+id/btn_login"
                    android:layout_below="@+id/btn_login"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/loginActivity_forgetPW"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/loginActivity_SignUp_message"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/loginActivity_SignUp_btn"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>

</ScrollView>