<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Welcome and Shuffle-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:id="@+id/rl_home_wlc_shuffle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:id="@+id/ll_wlc_shuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:paddingEnd="2.5dp"
                    android:paddingStart="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/homeFragment_wlc_shuffle_hey"
                        android:textColor="@color/colorGreen"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/homeFragment_wlc_shuffle_wlc"
                        android:textColor="@color/colorGreen"
                        android:textSize="16sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ll_wlc_shuffle"
                    android:orientation="horizontal"
                    android:paddingEnd="5dp"
                    android:paddingStart="2.5dp">

                    <TextView
                        android:id="@+id/tv_tap_to_shuffle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toStartOf="@+id/iv_tap_to_shuffle"
                        android:text="@string/homeFragment_wlc_shuffle_tap"
                        android:textColor="@color/colorGreen"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/iv_tap_to_shuffle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="Shuffle image"
                        android:src="@drawable/ic_home_fragment_tap_to_shuffle_green"
                        tools:ignore="HardcodedText" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!--Recent Line-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/homeFragment_recent_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/homeFragment_recent_line"
                android:textAlignment="center"
                android:textColor="@color/colorGreen"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/homeFragment_recent_line"
                android:background="@color/colorGreen" />

        </RelativeLayout>

        <!--Recent-->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_home_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager">

            </android.support.v7.widget.RecyclerView>

        </HorizontalScrollView>

        <!--Songs Line-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/homeFragment_songs_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/homeFragment_Songs_line"
                android:textAlignment="center"
                android:textColor="@color/colorGreen"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/homeFragment_songs_line"
                android:background="@color/colorGreen" />

        </RelativeLayout>

        <!--Songs-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_home_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:fastScrollEnabled="true"
            app:fastScrollHorizontalThumbDrawable="@drawable/thumb_home_rv"
            app:fastScrollHorizontalTrackDrawable="@drawable/track_home_rv"
            app:fastScrollVerticalThumbDrawable="@drawable/thumb_home_rv"
            app:fastScrollVerticalTrackDrawable="@drawable/track_home_rv"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    </LinearLayout>

</ScrollView>